@@ -168,6 +168,7 @@ export(makeSimpleIgraph)
 export(mapTableColumn)
 export(mapVisualProperty)
 export(matchArrowColorToEdge)
+export(mergeNetworks)
 export(openAppStore)
 export(openSession)
 export(removeNodeCustomGraphics)
