@@ -1,4 +1,6 @@
 Changes in version 2.8.0
++ New functions:
+  - mergeNetworks
 + Better messaging for...
   - App-related functions, like installApp
   - When style changes are applied to "default" style
